euphony-dsp/src/snapshots/euphony_dsp__tertiary__AddMul.snap
---
source: euphony-dsp/src/tertiary.rs
expression: node
---
Node {
    name: "AddMul",
    module: [
        "tertiary",
    ],
    impl_path: "euphony_dsp::tertiary",
    id: 75,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "add",
            id: 1,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "mul",
            id: 2,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Fused multiply-add. Computes `(input + add) * mul` with only one rounding\n error, yielding a more accurate result than an unfused add-multiply.\n",
    fork: None,
}
