euphony-dsp/src/snapshots/euphony_dsp__tertiary__MulAdd.snap
---
source: euphony-dsp/src/tertiary.rs
expression: node
---
Node {
    name: "MulAdd",
    module: [
        "tertiary",
    ],
    impl_path: "euphony_dsp::tertiary",
    id: 77,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "mul",
            id: 1,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "add",
            id: 2,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Fused multiply-add. Computes `(input * mul) + add` with only one rounding\n error, yielding a more accurate result than an unfused multiply-add.\n",
}
