euphony-dsp/src/snapshots/euphony_dsp__tertiary__Select.snap
---
source: euphony-dsp/src/tertiary.rs
expression: node
---
Node {
    name: "Select",
    module: [
        "tertiary",
    ],
    impl_path: "euphony_dsp::tertiary",
    id: 78,
    inputs: [
        Input {
            name: "cond",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "a",
            id: 1,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "b",
            id: 2,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " If `cond` is not `0.0 | NaN | Infinity`, then `a` is returned. Otherwise `b`\n is returned.\n",
    fork: None,
}
